# RandomStuff

./: README.md
butterfly/: README.md
docs/: ffmpeg.txt
docs/camera/: transforming sensor coords to 01.md
docs/languages/: rust.md
docs/languages/python/: generic_types.py
docs/math/: calculus_de.md  fem.md
docs/ml/: async_queue.py  create_optimizer.py  my_layers.py  tbptt.py  techniques.md  wandb.py
docs/ml/optimization/: cuda_graphs_compile_amp.py  cuda_graphs_streams.py  cuda_streams.py  cuda_streams_multithread.py  ddp_tutorial.py  tensorrt.py
docs/robotics/: ros.md
docs/robotics/ros2_ws/src/pubsub_example/: CMakeLists.txt  package.xml
docs/robotics/ros2_ws/src/pubsub_example_py/: package.xml  setup.cfg  setup.py
docs/robotics/ros2_ws/src/pubsub_example_py/pubsub_example_py/: pub_example.py  sub_example.py
java_class_generator/: README.md  java_class_generator.py
java_class_generator/classes/: dto.txt  fragments.txt  framework.txt  main.txt  resourceFragments.txt
midi_keyboard_synthesizer/: README.md
other/: passeiDiretoScrapper.js  space_analyzer.py
scripts/: download_manga.py  rand_norm_dist.py
small projs/butterfly/: butterfly.py
small projs/fib/: fib.cpp
small projs/java_class_generator/classes/: controllers.txt  dao.txt  views.txt
small projs/mandelbrot_set/: README.md  mandelbrot.py
small projs/midi_keyboard_synthesizer/: MIDIKeyboardSynthesizer.py  test.py
small projs/sql_creator/: create_db.sql  out.sql  sql_creator.py  sql_creator_back.py
sql_creator/: README.md  main.py  main2.py
(+2 files in other folders)
